# transformlib

./: .env  .flake8  .gitignore  .python-environment  BEERWARE-LICENSE  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
_docs/docs/: .buildinfo  genindex.html  search.html
_docs/source/: conf.py  index.rst
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  powertools.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  powertools.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst  modules.rst  powertools.rst  transformlib.rst
docs/source/usage/: installation.rst  quickstart.rst
examples/california_housing/: pipeline.py  pipeline.sh  run.py  run.sh
examples/california_housing/transforms/: download.py  eval.py  split.py  train.py  tune.py
powertools/: __init__.py  config.py  exceptions.py  node.py  pipeline.py  testing.py  transform.py
src/transformlib/: __init__.py  __main__.py  _pandas.py  _transformlib.py  config.py  node.py  pipeline.py  transform.py
tests/: conftest.py  test_examples.py  test_main.py  test_node.py  test_pipeline.py  test_transform.py  utils.py
tests/sample_packages/: test_squares.py  test_squares_with_cycle.py  test_squares_with_dag.py
tests/sample_packages/squares/: setup.py
tests/sample_packages/squares_with_cycle/: setup.py
tests/transforms/: mapping.py
tests/transforms/squares/: range.py  (+1 more)
transformlib/: exceptions.py  node.py  pipeline.py  transform.py
(+10 files in other folders)
